add marketing project, color change

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Playfair+Display:ital@0;1&display=swap');
 
 :root {
-  --om: #515553;
+  --om: #d46144;
   --twoThree: #232323;
   
 }
